test/should_fail/inh_model_003.gm
model inh_model_003;

node class A;
edge class B extends A;
